@@ -4,12 +4,12 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import seedu.address.commons.exceptions.IllegalValueException;
+import seedu.address.model.medicine.Medicine;
 import seedu.address.model.person.Address;
 import seedu.address.model.person.Email;
 import seedu.address.model.person.LastVisit;
@@ -29,23 +29,29 @@ class JsonAdaptedPerson {
     private final String phone;
     private final String email;
     private final String address;
-    private final String remark;
+    private final String lastVisit;
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
+    private final List<JsonAdaptedMed> meds = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
      */
     @JsonCreator
     public JsonAdaptedPerson(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
-                             @JsonProperty("email") String email, @JsonProperty("address") String address,
-                             @JsonProperty("remark") String remark, @JsonProperty("tags") List<JsonAdaptedTag> tags) {
+            @JsonProperty("email") String email, @JsonProperty("address") String address,
+            @JsonProperty("lastVisit") String lastVisit,
+            @JsonProperty("tags") List<JsonAdaptedTag> tags,
+            @JsonProperty("meds") List<JsonAdaptedMed> meds) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.address = address;
-        this.remark = remark;
+        this.lastVisit = lastVisit;
         if (tags != null) {
             this.tags.addAll(tags);
+        }
+        if (meds != null) {
+            this.meds.addAll(meds);
         }
     }
 
@@ -57,10 +63,13 @@ class JsonAdaptedPerson {
         phone = source.getPhone().value;
         email = source.getEmail().value;
         address = source.getAddress().value;
-        remark = source.getLastVisit().value;
+        lastVisit = source.getLastVisit().value;
         tags.addAll(source.getTags().stream()
                 .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+                .toList());
+        meds.addAll(source.getMedicines().stream()
+                .map(JsonAdaptedMed::new)
+                .toList());
     }
 
     /**
@@ -70,8 +79,13 @@ class JsonAdaptedPerson {
      */
     public Patient toModelType() throws IllegalValueException {
         final List<Tag> personTags = new ArrayList<>();
+        final List<Medicine> personMeds = new ArrayList<>();
         for (JsonAdaptedTag tag : tags) {
             personTags.add(tag.toModelType());
+        }
+
+        for (JsonAdaptedMed med : meds) {
+            personMeds.add(med.toModelType());
         }
 
         if (name == null) {
@@ -106,16 +120,19 @@ class JsonAdaptedPerson {
         }
         final Address modelAddress = new Address(address);
 
-        if (remark == null) {
+        if (lastVisit == null) {
             throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Address.class.getSimpleName()));
         }
         if (!Address.isValidAddress(address)) {
             throw new IllegalValueException(Address.MESSAGE_CONSTRAINTS);
         }
-        final LastVisit modelLastVisit = new LastVisit(remark);
+        final LastVisit modelLastVisit = new LastVisit(lastVisit);
 
         final Set<Tag> modelTags = new HashSet<>(personTags);
-        return new Patient(modelName, modelPhone, modelEmail, modelAddress, modelLastVisit, modelTags);
+
+        final Set<Medicine> modelMedicines = new HashSet<>(personMeds);
+
+        return new Patient(modelName, modelPhone, modelEmail, modelAddress, modelLastVisit, modelTags, modelMedicines);
     }
 
 }
